deployment/deploy.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: cv-comp-api-st
spec:
  selector:
    matchLabels:
      app: nodejs
      role: backend
  replicas: 1
  template:
    metadata:
      name: cv-comp-api-st-deployment
      labels:
        app: nodejs
        role: backend
        env: develop
    spec:
      containers:
      - name: cv-comp-api-st
        image: gcr.io/gcr-project/sample:1.0.0
        resources:
          limits:
            memory: "500Mi"
            cpu: "100m"
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /user
            port: 3000
          initialDelaySeconds: 20
        ports:
        - name: cv-api-st-port
          containerPort: 3000
