deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-comp-api-st-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: nodejs
    role: backend
